# script-doctor

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  LLM_agent.py  MAKEFILE  README.md  README_auto_play.md  app.py  ascii_prompting.py  astar_player.py  auto_play_and_record.py  benchmark_argmax_vs_argwhere.py  benchmark_check_win_dispatch.py  benchmark_env_subsystems.py  benchmark_manhattan_distance.py  bfs.py  broken_games.md  categorical.py  client.py  collect_games.py  compare_compile.py  count_tokens_in_game.py  dedup_games.py  enjoy.py  env.py  env_render.py  env_utils.py  env_wrappers.py  eval_rl.py  evolve_level.py  evolve_level_cpp.py  evolve_level_jax.py  evolve_level_nodejs.py  example_sokoban_agent.py  exit_train.py  exit_train_backend_common.py  exit_train_jax.py  exit_train_pytorch.py  exit_training_config.py  (+97 more)
.hydra/: config.yaml  hydra.yaml  overrides.yaml
.ipynb_checkpoints/: globals-checkpoint.py  llm_agent_loop-checkpoint.py
AALL/: README  compressions.py  gaussian.py  mctx_profile_list.txt  mctx_puzzlejax.py
backends/: __init__.py  nodejs.py
conf/: config.py  evolve_level.yaml  evolve_level_cpp.yaml  evolve_level_nodejs.yaml  train.yaml  train_cpp.yaml  train_nodejs.yaml  train_pytorch.yaml
custom_games/: XL_tmp_no_cancel_both.txt  XL_tmp_no_cancel_letter.txt  XL_tmp_no_cancel_ok.txt  blank.txt  colorban_test.txt  eyeball.txt  gdd301_test.txt  i_am_two.txt  limerick_test.txt  opposition_test.txt  perpendicular_test.txt  ponies_jumping_synchronously_fixed.txt  rot_rule_order_test.txt  sokoban_empty.txt  sokoban_rl_sanity.txt  test.txt  (+70 more)
(+4486 files in other folders)
